# setup_interface

./: CMakeLists.txt  README.md  launch_detection.py  package.xml
msg/: Position.msg
scripts/: launch.py  server.py  video_detection.py
web/static/css/: bootstrap.css  custom.css  style.css
web/static/js/: custom.js  customBoxInterface.js  customButtonsInterface.js  customModulesInterface.js
web/templates/: index.html  interfaceTmp.html
